# terraneko

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cc
src/field/: field.cc  field.h
src/meta/: assert.cc  assert.h  boot.cc  boot.h  modal.cc  modal.h  winfunc.cc  winfunc.h
src/models/: config.cc  config.h
